syntax = "proto3";

package Lazysplits.Proto;

message CppMessage {
	enum MessageType{
		NONE = 0;
		REQUEST_RESYNC = 1;
		TARGET_FOUND = 2;
	}

	int32 id = 1;
	MessageType type = 2;

	string shared_data_dir = 3;
	string game_name = 4;
	string target_name = 5;
	uint64 target_timestamp = 6;
}

message CsMessage {
	enum MessageType{
		NONE = 0;
		CLEAR_TARGETS = 1;
		NEW_TARGETS = 2;
	}
	message WatchVariable{
		uint32 index = 1;
		string name = 2;
		string value = 3;
	}
	message Target{
		string target_name = 1;
		repeated WatchVariable watch_variables = 2;
	}

	int32 id = 1;
	MessageType type = 2;

	string shared_data_dir = 3;
	string game_name = 4;
	repeated Target targets = 5;
}